--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -19,6 +19,11 @@
             <h5 class="font-weight-light my-3">Localização</h5>
             {{ .Site.Params.location | markdownify }}
           </div>
+          <div class="col-lg-4 small-post-border">
+            <i class="ti-mobile h1 text-primary"></i>
+            <h5 class="font-weight-light my-3">Phone</h5>
+            {{ .Site.Params.mobile }}
+          </div>
         </div>
       </div>
     </div>
