--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -21,7 +21,7 @@
           </div>
           <div class="col-lg-4 small-post-border">
             <i class="ti-mobile h1 text-primary"></i>
-            <h5 class="font-weight-light my-3">Phone</h5>
+            <h5 class="font-weight-light my-3">Telefone</h5>
             {{ .Site.Params.mobile }}
           </div>
         </div>
