--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,12 +9,12 @@
         class="img-fluid author-thumb-sm d-block mx-auto rounded-circle mb-4">
       {{ end }}
       <p>{{ .Summary }}</p>
-      <a href="{{ .Permalink }}" class="btn btn-outline-primary">Know More</a>
+      <a href="{{ .Permalink }}" class="btn btn-outline-primary">Saiba mais</a>
       {{ end }}
     </div>
     <!-- category -->
     <div class="widget">
-      <h4 class="widget-title">Category</h4>
+      <h4 class="widget-title">Categorias</h4>
       {{- if isset .Site.Taxonomies "categories" }}
       {{- if not (eq (len .Site.Taxonomies.categories) 0) }}
       <ul class="list-unstyled">
@@ -28,7 +28,7 @@
       {{- end }}
     </div>
     <!-- Tags -->
-    <div class="widget">
+    <!-- <div class="widget">
       <h4 class="widget-title">Tag</h4>
       {{- if isset .Site.Taxonomies "tags" }}
       {{- if not (eq (len .Site.Taxonomies.tags) 0) }}
@@ -40,10 +40,10 @@
       </ul>
       {{- end }}
       {{- end }}
-    </div>
+    </div> -->
     <!-- social -->
     <div class="widget">
-      <h4 class="widget-title">Social</h4>
+      <h4 class="widget-title">Redes Sociais</h4>
       <ul class="list-inline social-links">
         {{ range .Site.Params.social }}
         <li class="list-inline-item"><a href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a></li>
@@ -51,8 +51,8 @@
       </ul>
     </div>
     <!-- advertisement -->
-    <div class="widget">
+    <!--<div class="widget">
       <img src="{{`images/promotion.png` | absURL}}" alt="" class="img-fluid">
-    </div>
+    </div> -->
   </div>
 </div>
