--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,10 +17,10 @@
             <div class="col-md-6 offset-md-1">
               <div class="card-body">
                 <div class="mb-3 post-meta">
-                  <span>By {{ .Site.Params.Author }}</span>
+                  <span>Por {{ .Site.Params.Author }}</span>
                   {{ if not .Params.HideDate }}
                   <span class="border-bottom border-primary px-2 mx-1"></span>
-                  <span>{{ .PublishDate.Format "02 January 2006" }}</span>
+                  <span>{{ .PublishDate.Format "01/02/2006" }}</span>
                   {{ end }}
                 </div>
                 <a href="{{ .Permalink }}"
@@ -49,14 +49,14 @@
           {{ end }}
           <div class="media-body">
             <div class="mb-3 post-meta">
-              <span>By {{ .Site.Params.Author }}</span>
+              <span>Por {{ .Site.Params.Author }}</span>
               {{ if not .Params.HideDate }}
               <span class="border-bottom border-primary px-2 mx-1"></span>
-              <span>{{ .PublishDate.Format "02 Jan 2006" }}</span>
+              <span>{{ .PublishDate.Format "01/02/2006" }}</span>
               {{ end }}
             </div>
             <a href="{{ .Permalink }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
-            <a href="{{ .Permalink }}" class="btn btn-outline-primary">read more</a>
+            <a href="{{ .Permalink }}" class="btn btn-outline-primary">ler mais</a>
           </div>
         </article>
       </div>
@@ -86,14 +86,14 @@
                 {{ end }}
                 <a href="{{ .Permalink }}" class="h5 d-block my-3">{{ .Title | markdownify }}</a>
                 <div class="mb-3 post-meta">
-                  <span>By {{ .Site.Params.Author }}</span>
+                  <span>Por {{ .Site.Params.Author }}</span>
                   {{ if not .Params.HideDate }}
                   <span class="border-bottom border-primary px-2 mx-1"></span>
-                  <span>{{ .PublishDate.Format "02 January 2006" }}</span>
+                  <span>{{ .PublishDate.Format "01/02/2006" }}</span>
                   {{ end }}
                 </div>
                 <p class="card-text">{{ .Summary }}</p>
-                <a href="{{ .Permalink }}" class="btn btn-outline-primary">read more</a>
+                <a href="{{ .Permalink }}" class="btn btn-outline-primary">ler mais</a>
               </div>
             </article>
           </div>
