--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
         <h2>{{ .Site.Params.newsletter.title | markdownify }}</h2>
         <p class="text-light px-md-5 py-4 border-left border-right border-primary">
           {{ .Site.Params.newsletter.content | markdownify }}</p>
-        <form action="#" class="row justify-content-center">
+        <form action="https://leonardofullana.us7.list-manage.com/subscribe/post" method="POST" class="row justify-content-center">
           <div class="input-group col-md-8">
             <input type="text" class="form-control" placeholder="Coloque seu melhor email">
             <div class="input-group-append">
