--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,8 +7,10 @@
         <p class="text-light px-md-5 py-4 border-left border-right border-primary">
           {{ .Site.Params.newsletter.content | markdownify }}</p>
         <form action="https://leonardofullana.us7.list-manage.com/subscribe/post" method="POST" class="row justify-content-center">
+	    <input type="hidden" name="u" value="c33e6b4c9a7a83874775e250a">
+    	    <input type="hidden" name="id" value="20010fad97">
           <div class="input-group col-md-8">
-            <input type="text" class="form-control" placeholder="Coloque seu melhor email">
+            <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" class="form-control" placeholder="Coloque seu melhor email">
             <div class="input-group-append">
               <button class="input-group-text btn btn-primary">Quero me inscrever</button>
             </div>
