--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -51,8 +51,8 @@
       </ul>
     </div>
     <!-- advertisement -->
-    <!--<div class="widget">
-      <img src="{{`images/promotion.png` | absURL}}" alt="" class="img-fluid">
-    </div> -->
+    <div class="widget">
+      <img src="{{`images/promotion.png` | absURL}}" alt="posts-segundas-sextas" class="img-fluid">
+    </div>
   </div>
 </div>
